--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "nodejs-sdk",
   "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/lib/index.js",
+  "module": "dist/lib/index.es.js",
   "scripts": {
-    "build": "rm -rf ./dist && tsc",
+    "build": "rm -rf ./dist && rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "test": "jest"
   },
   "repository": {
@@ -19,10 +20,14 @@
   },
   "homepage": "https://github.com/asaje379/nodejs-sdk#readme",
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/jest": "^29.0.2",
     "jest": "^29.0.3",
+    "rollup": "^4.18.0",
     "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
+    "tslib": "^2.6.3",
     "typescript": "^4.8.3"
   },
   "dependencies": {
