--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-sdk",
+  "name": "@kkiapay-org/nodejs-sdk",
   "version": "1.0.2",
   "description": "",
   "main": "dist/lib/index.js",
